--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'genymotion'
 
+apply plugin: 'genymotion'
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -17,20 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-}
-
-genymotion {
-    devices {
-        xperia {
-            template "Sony Xperia Z - 4.3 - API 18 - 1080x1920"
+    genymotion {
+        devices {
+            "Nexus 7" {
+                template "Google Nexus 7 - 4.2.2 - API 17 - 800x1280"
+                density "ldpi"
+                deleteWhenFinish false
+            }
         }
     }
-
-    config {
-        genymotionPath = "C:/Users/rob/AppData/Local/Genymobile/Genymotion/Genymobile/Genymotion/deployed/Sony Xperia Z - 4.3 - API 18 - 1080x1920"
-        taskLaunch = "myCustomTask"
-    }
-}
+ }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -39,5 +35,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    classpath 'com.genymotion:plugin:1.4'
+
 }
+
